# ENPH353_Team5

./: .gitignore  Competition License Plate CNN.ipynb  README.md  locations.md  tasks.md
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/adeept_awr_ros_driver/: ArrayIR.h
devel/include/enph353_gazebo/: GetLegalPlates.h  GetLegalPlatesRequest.h  GetLegalPlatesResponse.h  SubmitPlate.h  SubmitPlateRequest.h  SubmitPlateResponse.h
devel/lib/pkgconfig/: adeept_awr_description.pc  adeept_awr_gazebo.pc  adeept_awr_ros_driver.pc  enph353_gazebo.pc  enph353_npcs.pc  enph353_utils.pc
devel/share/adeept_awr_description/cmake/: adeept_awr_descriptionConfig.cmake
src/2022_competition/: .gitignore  README.md
src/2022_competition/adeept_awr_ros_driver/: CMakeLists.txt  README.md  package.xml
src/2022_competition/enph353/enph353_utils/: CMakeLists.txt  README.md  package.xml
src/2022_competition/enph353/enph353_utils/config/: f310_teleop_twist_joy.yaml  f310_twist_mux.yaml  teleop_twist_joy.yaml  twist_mux.yaml
src/2022_competition/enph353/enph353_utils/launch/: desktop.launch  manual_control_R1.launch  npcs.launch  real.launch  robots.launch  score_tracker.launch  sim.launch
src/2022_competition/enph353/enph353_utils/scripts/: run_sim.sh  score_tracker.py  score_tracker.ui
src/2022_competition/media_src/: Terrain_2.blend  Terrain_2.dae
src/enph353_comp_controller/: CMakeLists.txt  package.xml
src/enph353_comp_controller/src/: PID_drive.py  cross_walk.py  find_read_plate.py  inner_road.py  move_robot.py  read_plate.py  state_machine.py
(+133 files in other folders)
